# modoboa

./: .deepsource.toml  .dockerignore  .editorconfig  .gitignore  .hgignore  .landscape.yaml  .mergify.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  COPYING  Dockerfile.dev  INSTALL  LICENSE  MANIFEST.in  README  README.rst  SECURITY.md  codecov.yml  dev-requirements.txt  docker-compose.yml  ldap-requirements.txt  mysql-requirements.txt  postgresql-requirements.txt  pylintrc  pyproject.toml  requirements.txt  settings_sample.py  setup.cfg  setup.py  test-requirements.txt  tests.py  tox.ini  transifex.yml  update_deps.sh  urls.py
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: Bug_Report.md  config.yml
.github/workflows/: coverage.yaml  documentation.yml  frontend.yml  modoboa.yml  mysql.yml  postgresql.yml  pypi-release.yml  python-package.yml  stale.yml
.tx/: config
admin/: __init__.py  exceptions.py  forms.py  lib.py  models.py  permissions.py  tables.py  tests.py  urls.py  views.py
admin/fixtures/: demo.json  initial_data.json  test_content.json
admin/migrations/: 0001_initial.py  0002_auto__del_field_alias_mbox.py  0003_auto__add_extension.py  0004_add_permissions.py  0005_increase_columns_length.py  0006_auto__add_domainalias.py  0007_auto__alter_full_address.py  0008_update_mailbox_path.py  0010_fill_alias_domain.py  0012_fill_object_dates.py  0015_auto__add_objectaccess__add_unique_objectaccess_user_content_type_obje.py  0015_auto__add_objectowner.py  0015_move_passwords.py  0016_auto__add_objectaccess__add_unique_objectaccess_user_content_type_obje.py  0017_set_permissions.py  0018_auto__add_unique_alias_domain_address.py  0019_set_default_group.py
admin/templatetags/: admin_extras.py
auth/: __init__.py  forms.py  lib.py  views.py
demo/: __init__.py  urls.py  views.py
doc/: Makefile  conf.py  configuration.rst  contributing.rst  contributors.rst  getting_started.rst  index.rst  install.rst  installation.rst  moving.rst  plugin_api.rst  rebuild_virtual_env.rst  requirements.txt  rest_api.rst  settings_sample.py  upgrade.rst  virtualmachine.rst
doc-ng/: configuration.md  contributors.md  index.md  lifecycle.md  moving.md  openapi.json  package.json  pnpm-lock.yaml  rebuild_venv.md  rest_api.md  upgrade.md
doc-ng/.vitepress/: config.mjs
doc-ng/contributing/: getting_start.md  plugin_api.md  translation.md
doc-ng/installation/: amavis.md  dovecot.md  installer.md  manual.md  modoboa.md  opendkim.md  postfix.md  radicale.md  requirements.md  upgrade.md  webserver.md
doc-ng/openapi/: [operationId].md  index.md
doc-ng/tags/: [tag].md  [tag].paths.js
doc/additional/: migrating.rst  virtualmachine.rst  webserver.rst
doc/contributing/: events.rst  getting_started.rst  plugin_api.rst  quota_res  translation.rst
doc/extending/: events.rst  getting_started.rst  plugin_api.rst
doc/features/: dmarc.rst  imap-migration.rst  pdfcredentials.rst
doc/getting_started/: configuration.rst  install.rst  integration.rst  plugins.rst  upgrade.rst
doc/integration/: imap_and_smtp.rst  imap_servers.rst  smtp_servers.rst  web_servers.rst
doc/manual_installation/: amavis.rst  dovecot.rst  modoboa.rst  opendkim.rst  postfix.rst  radicale.rst  rebuild_virtual_env.rst  webserver.rst
doc/plugins/: amavis.rst  limits.rst  overview.rst  postfix_autoreply.rst  postfix_relay_domains.rst  radicale.rst  sievefilters.rst  statistics.rst  webmail.rst
docker/: .Dockerfile.front.dev.kate-swp  Dockerfile.admin.dev  Dockerfile.amavis.dev  Dockerfile.dev  Dockerfile.front.dev  Dockerfile.radicale.dev  compose.redis-sentinel.yml  doveadm
docker/amavis_config/: amavisd.conf
docker/dovecot_config/: auth-custom.conf  dovecot-oauth2.conf.ext
docker/radicale_config/: config  rights
example/: settings.py  urls.py
extensions/: __init__.py
extensions/amavis_quarantine/: __init__.py  cleanup.py  dbrouter.py  forms.py  lib.py  main.py  models.py  release.py  sql_listing.py  urls.py  views.py
extensions/limits/: __init__.py  controls.py  forms.py  lib.py  main.py  models.py  permissions.py  tables.py  urls.py  views.py
extensions/postfix_autoreply/: __init__.py  forms.py  main.py  models.py  urls.py  views.py
extensions/sievefilters/: __init__.py  digest_md5.py  forms.py  lib.py  main.py  managesieve.py  urls.py  views.py
extensions/stats/: __init__.py  grapher.py  logparser.py  mailrrd.py  main.py  models.py  urls.py  views.py
extensions/webmail/: __init__.py  exceptions.py  fetch_parser.py  forms.py  imap_listing.py  imaputils.py  lib.py  main.py  middleware.py  urls.py  views.py
frontend/: .ash_history  .editorconfig  .env.development  .eslint.conf.js  .eslintrc.js  .gitignore  .yarnrc  Makefile  README.md  gettext.config.cjs  gettext.config.js  gettext.config.json  index.html  merge_translations.py  package-lock.json  package.json  vite.config.js  vue.config.js
frontend/config/: index.js
frontend/public/: config.json  index.html
frontend/src/: App.vue  api.js  constants.json  main.js  translations.json  utils.js
lib/: __init__.py  authbackends.py  db.py  email_listing.py  emailutils.py  events.py  exceptions.py  formutils.py  fsops.py  imap_utf7.py  ldaputils.py  middleware.py  models.py  parameters.py  permissions.py  sysutils.py  tables.py  u2u_decode.py  webutils.py
lib/fixtures/: demo.json
locale/: README.transifex
main/: forms.py  models.py  urls.py  views.py
modoboa/: __init__.py  test_settings.py  urls.py  urls_api.py  urls_api_v1.py  urls_api_v2.py  version.py
scripts/: autoreply  autoreply.py  extension.py  populate.py  upgrade_autoreply.py
templates/: base.html  fixed.html  fluid.html  genericform.html  layout.html  layout_simple.html  nlayout.html  twocols.html
test_data/: base.ldif  slapd.conf
test_project/: .coveragerc  docker-compose.yml  envfile  manage.py  modoboa.db  oidc_key
tests/: install_from_scratch.py
userprefs/: __init__.py  forms.py  models.py  urls.py  views.py
(+2350 files in other folders)
